Fix invite count (#46)
* Fix invite count

* Fix sidebar overflowing in tablet

--- a/src/App.scss
+++ b/src/App.scss
@@ -46,8 +46,9 @@
     --sidebar-display: unset;
     --header-display: unset;
     --main-display: unset;
-    grid-template: 'sidebar target-selector main header';
-    grid-template-columns: minmax(4em, 0.5fr) minmax(20%, 2fr) 8fr minmax(min-content, 1fr);
+    grid-template: 'sidebar target-selector main';
+    padding-right: 1em;
+    grid-template-columns: minmax(4em, 0.5fr) 2fr minmax(min-content, 6fr);
 
     .TargetSelector {
       padding-bottom: unset;
